--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="inspiration">
         <h1>My Inspiration</h1>
-        <p>A web design competition platform that highlights the latest trends and exceptional work from designers and agencies.You can also vote for your favorite designs. </p>
+        <p id="inspiration-p">A web design competition platform that highlights the latest trends and exceptional work from designers and agencies.You can also vote for your favorite designs. </p>
 
       
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YGMX1ho53A4?si=Vv_XXR-j7S0JsIMS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
