--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="current-target inspiration">
         <h1>My Current Target</h1>
-        <p>A web design competition platform that highlights the latest trends and exceptional work from designers and agencies.You can also vote for your favorite designs. </p>
+        <p id="inspiration-p">A web design competition platform that highlights the latest trends and exceptional work from designers and agencies.You can also vote for your favorite designs. </p>
 
         <div class="card-container">
             <div class="card1">
